Fix #2610: clipped card's long description using lodash trancate method

--- a/web/client/components/catalog/RecordItem.css
+++ b/web/client/components/catalog/RecordItem.css
@@ -27,11 +27,6 @@
     overflow: hidden;
 }
 
-.record-item-description {
-    width: 350px;
-    white-space: nowrap;
-}
-
 .record-item .preview{
     float: left;
     width: 150px;
